2019-01-04  Aakash Jain  <aakash_jain@apple.com>

        [ews-build] Check patch relevance step should print patch id
        https://bugs.webkit.org/show_bug.cgi?id=193137

        Reviewed by Lucas Forschler.

        * BuildSlaveSupport/ews-build/steps.py:
        (CheckPatchRelevance.start): Update the status to include patch id.

2019-01-04  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: Increase simulator teardown timeout
        https://bugs.webkit.org/show_bug.cgi?id=193141
        <rdar://problem/46174217>

        Rubber-stamped by Aakash Jain.

        * Scripts/webkitpy/xcode/simulated_device.py:
        (SimulatedDeviceManager.tear_down): Use SIMULATOR_BOOT_TIMEOUT.

2019-01-03  Ross Kirsling  <ross.kirsling@sony.com>

        test262-runner misbehaves when test file YAML has a trailing space
        https://bugs.webkit.org/show_bug.cgi?id=193053

        Reviewed by Yusuke Suzuki.

        * Scripts/test262/Runner.pm:
        (parseData):
        Accept trailing space when parsing a test file's YAML block.

2019-01-03  Michael Catanzaro  <mcatanzaro@igalia.com>

        UserMedia test should use WKPageNavigationClient
        https://bugs.webkit.org/show_bug.cgi?id=192913

        Reviewed by Youenn Fablet.

        The test currently uses the deprecated WKPageLoaderClient. It should use
        WKPageNavigationClient instead, which provides the same callback under a similar name.

        * TestWebKitAPI/Tests/WebKit/UserMedia.cpp:
        (TestWebKitAPI::TEST):

2019-01-02  Alex Christensen  <achristensen@webkit.org>

        Homograph with LATIN SMALL LETTER R WITH FISHHOOK
        https://bugs.webkit.org/show_bug.cgi?id=192944

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WTF/cocoa/URLExtras.mm:
        (TestWebKitAPI::TEST):

2019-01-02  Wenson Hsieh  <wenson_hsieh@apple.com>

        Add support for using the current text selection as the find string on iOS
        https://bugs.webkit.org/show_bug.cgi?id=193034